--- a/sala-host.html
+++ b/sala-host.html
@@ -72,6 +72,12 @@
                         <button type="submit" class="submit-btn small-btn">Salvar Dicas</button>
                     </form>
                 </div>
+                <div class="tool-section" style="border-top: 1px solid rgba(255,255,255,0.1); padding-top: 1rem; margin-top: 1rem;">
+                <h4>Mídias do Jogo</h4>
+                <div id="game-assets-container" style="display: flex; flex-direction: column; gap: 8px; max-height: 250px; overflow-y: auto;">
+                    <p style="font-size: 0.8rem; color: #888; text-align: center;">Carregando arquivos...</p>
+                </div>
+            </div>
 
                 <div class="tool-section">
                     <h3>Decisões do Jogador</h3>
