--- a/admin.html
+++ b/admin.html
@@ -189,6 +189,20 @@
                                 <label class="form-label-or" style="font-size: 0.9rem;">Ou cole a URL (YouTube/Vimeo):</label>
                                 <input type="url" id="new-game-trailer" placeholder="https://youtube.com/...">
                             </div>
+                            <div class="form-group" style="border-top: 1px dashed var(--border-color); margin-top: 1.5rem; padding-top: 1rem;">
+                                <label style="color: var(--secondary-color);">📂 Arquivos da Sessão (Pistas & Conteúdo)</label>
+                                <p class="form-hint">Arquivos que o Host poderá enviar para a tela dos jogadores durante a partida.</p>
+                                
+                                <div style="margin-bottom: 0.5rem;">
+                                    <label for="assets-upload-input" class="upload-label" style="display:inline-flex; width: 100%; justify-content: center; border: 1px dashed var(--secondary-color); background: rgba(0, 255, 136, 0.05);">
+                                        <ion-icon name="folder-open-outline"></ion-icon> <span>Adicionar Mídias do Jogo</span>
+                                    </label>
+                                    <input type="file" id="assets-upload-input" multiple accept="image/*,video/*" style="display: none;">
+                                    <span id="assets-upload-status" class="form-hint" style="display: block; text-align: center; margin-top: 5px;"></span>
+                                </div>
+
+                                <div id="assets-preview-list" class="assets-list-container" style="display: flex; flex-direction: column; gap: 8px;"></div>
+                            </div>
                         </div>
                         <div class="modal-footer"><div class="right-buttons"><button type="button" id="cancel-create-game-btn" class="submit-btn secondary-btn">Cancelar</button><button type="submit" id="save-game-submit-btn" class="submit-btn primary-btn">Criar Jogo</button></div></div>
                     </form>
