--- a/sala-host.html
+++ b/sala-host.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sala do Host - PlayU</title>
-    <link rel="stylesheet" href="assets/css/style.ae113745.css">
+    <link rel="stylesheet" href="assets/css/style.d62de70f.css">
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </head>
@@ -72,6 +72,12 @@
                         <button type="submit" class="submit-btn small-btn">Salvar Dicas</button>
                     </form>
                 </div>
+                <div class="tool-section" style="border-top: 1px solid rgba(255,255,255,0.1); padding-top: 1rem; margin-top: 1rem;">
+                <h4>Mídias do Jogo</h4>
+                <div id="game-assets-container" style="display: flex; flex-direction: column; gap: 8px; max-height: 250px; overflow-y: auto;">
+                    <p style="font-size: 0.8rem; color: #888; text-align: center;">Carregando arquivos...</p>
+                </div>
+            </div>
 
                 <div class="tool-section">
                     <h3>Decisões do Jogador</h3>
@@ -131,6 +137,6 @@
     <script src="assets/js/storage.js"></script>
     <script src="assets/js/gamedata.js"></script>
     <script src="assets/js/firebase-config.js"></script>
-    <script src="assets/js/sala-host.ae113745.js"></script>
+    <script src="assets/js/sala-host.d62de70f.js"></script>
 </body>
 </html>
