deploy: 29e108a46745c9f7e8313cc9c398457b0ed80c93

--- a/admin.html
+++ b/admin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Painel Admin - PlayU</title>
-    <script src="assets/js/version.219a1c79.js"></script>
+    <script src="assets/js/version.29e108a4.js"></script>
     <script>
         function loadAsset(path) {
             const version = typeof SITE_VERSION !== 'undefined' ? SITE_VERSION : new Date().getTime();
@@ -117,7 +117,7 @@
                         <h4 style="color: var(--secondary-color); border-bottom: 1px solid #333; padding-bottom: 10px; margin-bottom: 15px; margin-top:20px;">Marketing</h4>
                         <div class="form-group"><label>Capa</label><div style="display:flex;gap:10px;"><div style="flex:1;"><input type="file" id="admin-cover-upload" accept="image/*" style="display:none;"><label for="admin-cover-upload" class="upload-label small-btn">Upload Capa</label><input type="text" id="new-game-cover" placeholder="URL" style="margin-top:5px;font-size:0.8rem;"></div><img id="admin-cover-preview" src="" style="width:60px;height:60px;object-fit:cover;border-radius:4px;display:none;background:#000;"></div></div>
                         <div class="form-group"><label>Galeria</label><input type="file" id="gallery-upload-input" multiple accept="image/*" style="display:none;"><label for="gallery-upload-input" class="upload-label small-btn">Adicionar Fotos</label><div id="gallery-preview-grid" class="gallery-grid" style="margin-top:5px;"></div></div>
-                        <div class="form-group"><label>Trailer</label><label for="admin-trailer-upload" class="upload-label small-btn">Enviar Vídeo</label><input type="file" id="admin-trailer-upload" accept="video/*" style="display:none;"><input type="text" id="new-game-trailer" style="display:none;"></div>
+                        <div class="form-group"><label>Teaser</label><label for="admin-trailer-upload" class="upload-label small-btn">Enviar Vídeo</label><input type="file" id="admin-trailer-upload" accept="video/*" style="display:none;"><input type="text" id="new-game-trailer" style="display:none;"></div>
                     </div>
 
                     <div class="modal-col-right" style="background: rgba(0,0,0,0.2); padding: 1.5rem; border-radius: 8px; border: 1px solid var(--border-color); display: flex; flex-direction: column;">
@@ -263,10 +263,10 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-storage.js"></script>
     <script src="assets/js/firebase-config.js"></script>
     <script>
-        loadAsset('assets/css/style.219a1c79.css');
+        loadAsset('assets/css/style.29e108a4.css');
         loadAsset('https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js');
         loadAsset('https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js');
-        loadAsset('assets/js/admin.219a1c79.js');
+        loadAsset('assets/js/admin.29e108a4.js');
     </script>
 </body>
 </html>
