correções visuais e atualizações na página dos jogos

--- a/admin.html
+++ b/admin.html
@@ -59,7 +59,7 @@
                 <h2>Gerenciamento de Jogos</h2>
                 <button id="open-create-game-modal-btn" class="submit-btn"><ion-icon name="add-circle-outline"></ion-icon> Novo Jogo</button>
             </div>
-            <div id="game-list-container" class="game-grid"></div>
+            <div id="game-list-container" class="games-grid"></div>
         </section>
 
         <section id="content-management" class="dashboard-section hidden-section">
