--- a/admin.html
+++ b/admin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Painel Admin - PlayU</title>
-    <script src="assets/js/version.3e232c5f.js"></script>
+    <script src="assets/js/version.c59b84bc.js"></script>
     <script>
         function loadAsset(path) {
             const version = typeof SITE_VERSION !== 'undefined' ? SITE_VERSION : new Date().getTime();
@@ -59,7 +59,7 @@
                 <h2>Gerenciamento de Jogos</h2>
                 <button id="open-create-game-modal-btn" class="submit-btn"><ion-icon name="add-circle-outline"></ion-icon> Novo Jogo</button>
             </div>
-            <div id="game-list-container" class="game-grid"></div>
+            <div id="game-list-container" class="games-grid"></div>
         </section>
 
         <section id="content-management" class="dashboard-section hidden-section">
@@ -263,10 +263,10 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-storage.js"></script>
     <script src="assets/js/firebase-config.js"></script>
     <script>
-        loadAsset('assets/css/style.3e232c5f.css');
+        loadAsset('assets/css/style.c59b84bc.css');
         loadAsset('https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js');
         loadAsset('https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js');
-        loadAsset('assets/js/admin.3e232c5f.js');
+        loadAsset('assets/js/admin.c59b84bc.js');
     </script>
 </body>
 </html>
