--- a/dashboard.html
+++ b/dashboard.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard - PlayU</title>
+    
     <script src="assets/js/version.js"></script>
     <script>
         function loadAsset(path) {
@@ -75,9 +76,36 @@
 
     </main>
 
-    <div id="profile-modal" class="modal-overlay hidden"><div class="modal-content"><button id="close-profile-modal" class="close-overlay-btn">&times;</button><h3>Editar Perfil</h3><form id="profile-form"><div class="form-group"><label>Nome de Exibição</label><input type="text" id="profile-name-input" required></div><div class="form-group"><label>Email</label><input type="email" id="profile-email-display" disabled style="opacity:0.7"></div><button type="submit" class="submit-btn">Salvar</button></form></div></div>
+    <div id="profile-modal" class="modal-overlay hidden">
+        <div class="modal-content">
+            <button id="close-profile-modal" class="close-overlay-btn">&times;</button>
+            <h3>Editar Perfil</h3>
+            <form id="profile-form">
+                <div class="form-group">
+                    <label>Nome de Exibição</label>
+                    <input type="text" id="profile-name-input" required>
+                </div>
+                <div class="form-group">
+                    <label>Email</label>
+                    <input type="email" id="profile-email-display" disabled style="opacity:0.7">
+                </div>
+                <button type="submit" class="submit-btn">Salvar</button>
+            </form>
+        </div>
+    </div>
 
-    <div id="course-viewer-modal" class="modal-overlay hidden"><div class="modal-content large-modal" style="max-width: 900px;"><button id="close-course-viewer" class="close-overlay-btn">&times;</button><div id="course-player-container" style="display: grid; grid-template-columns: 250px 1fr; gap: 20px; height: 100%;"><div id="course-modules-list" style="border-right: 1px solid var(--border-color); overflow-y: auto; padding-right: 10px;"></div><div id="course-video-area" style="display: flex; flex-direction: column;"><h3 id="current-video-title" style="margin-bottom: 1rem;">Selecione uma aula</h3><div id="video-embed-wrapper" class="trailer-wrapper" style="background: #000; border-radius: 10px; flex-grow: 1;"></div></div></div></div></div>
+    <div id="course-viewer-modal" class="modal-overlay hidden">
+        <div class="modal-content large-modal" style="max-width: 900px;">
+            <button id="close-course-viewer" class="close-overlay-btn">&times;</button>
+            <div id="course-player-container" style="display: grid; grid-template-columns: 250px 1fr; gap: 20px; height: 100%;">
+                <div id="course-modules-list" style="border-right: 1px solid var(--border-color); overflow-y: auto; padding-right: 10px;"></div>
+                <div id="course-video-area" style="display: flex; flex-direction: column;">
+                    <h3 id="current-video-title" style="margin-bottom: 1rem;">Selecione uma aula</h3>
+                    <div id="video-embed-wrapper" class="trailer-wrapper" style="background: #000; border-radius: 10px; flex-grow: 1;"></div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div id="create-game-modal" class="modal-overlay hidden">
         <div class="modal-content large-modal">
@@ -165,6 +193,8 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-storage.js"></script>
 
     <script src="assets/js/firebase-config.js"></script>
+    <script src="assets/js/main.js"></script> 
+
     <script>
         loadAsset('assets/css/style.css');
         loadAsset('https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js');
