atualizações visuais e correções

--- a/admin.html
+++ b/admin.html
@@ -270,8 +270,8 @@
                         <h4>Horários para <span id="editing-date-display" style="color:var(--secondary-color);"></span></h4>
                         <div id="single-day-slots" style="display:flex;flex-wrap:wrap;gap:0.5rem;margin:10px 0;"></div>
                         <div style="display:flex; gap:10px;">
-                            <select id="single-time-input" style="flex:1; padding:0.5rem; border-radius:5px; background:var(--bg-color); color:#fff; border:1px solid #444;"></select>
-                            <button type="button" id="add-single-time-btn" class="submit-btn small-btn">+</button>
+                        <input type="text" id="single-time-input" placeholder="HH:MM" maxlength="5" style="flex:1; padding:0.5rem; border-radius:5px; background:var(--bg-color); color:#fff; border:1px solid #444; text-align:center; font-size:1.1rem; letter-spacing: 2px;"><button type="button" id="add-single-time-btn" class="submit-btn small-btn">+</button>
+                        <button type="button" id="add-single-time-btn" class="submit-btn small-btn">+</button>
                         </div>
                         <div style="display:flex;gap:10px;margin-top:15px;justify-content:flex-end;">
                             <button id="clear-day-btn" class="submit-btn danger-btn small-btn">Limpar Dia</button>
