--- a/sala-host.html
+++ b/sala-host.html
@@ -29,11 +29,12 @@
     <div class="host-grid-container">
         <div class="host-video-area">
             <div class="video-wrapper remote">
-                <video id="host-remote-video" autoplay playsinline></video>
+                <img src="assets/images/GIF Play.U.gif" class="video-bg-gif" alt="Aguardando...">
+                <video id="host-local-video" autoplay playsinline></video>
             </div>
             <div class="video-wrapper local">
-                <video id="host-local-video" autoplay playsinline muted></video>
-                <div class="video-label">Você</div>
+                <video id="host-remote-video" autoplay playsinline muted></video>
+                <div class="video-label"></div>
             </div>
             <div class="host-controls-bar">
                 <button id="host-mic-btn" class="control-btn" title="Microfone"><ion-icon name="mic-outline"></ion-icon></button>
