--- a/sala.html
+++ b/sala.html
@@ -29,6 +29,8 @@
         <video id="player-remote-video" autoplay playsinline></video>
         
         <video id="player-local-video" autoplay playsinline muted></video>
+                <img src="assets/images/GIF Play.U.gif" class="video-bg-gif" alt="Aguardando...">
+
 
         <div id="player-timer" class="player-timer-overlay">00:00</div>
 
