--- a/admin.html
+++ b/admin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Painel Admin - PlayU</title>
-    <script src="assets/js/version.5732ff61.js"></script>
+    <script src="assets/js/version.901f3ce2.js"></script>
     <script>
         function loadAsset(path) {
             const version = typeof SITE_VERSION !== 'undefined' ? SITE_VERSION : new Date().getTime();
@@ -270,8 +270,8 @@
                         <h4>Horários para <span id="editing-date-display" style="color:var(--secondary-color);"></span></h4>
                         <div id="single-day-slots" style="display:flex;flex-wrap:wrap;gap:0.5rem;margin:10px 0;"></div>
                         <div style="display:flex; gap:10px;">
-                            <select id="single-time-input" style="flex:1; padding:0.5rem; border-radius:5px; background:var(--bg-color); color:#fff; border:1px solid #444;"></select>
-                            <button type="button" id="add-single-time-btn" class="submit-btn small-btn">+</button>
+                        <input type="text" id="single-time-input" placeholder="HH:MM" maxlength="5" style="flex:1; padding:0.5rem; border-radius:5px; background:var(--bg-color); color:#fff; border:1px solid #444; text-align:center; font-size:1.1rem; letter-spacing: 2px;"><button type="button" id="add-single-time-btn" class="submit-btn small-btn">+</button>
+                        <button type="button" id="add-single-time-btn" class="submit-btn small-btn">+</button>
                         </div>
                         <div style="display:flex;gap:10px;margin-top:15px;justify-content:flex-end;">
                             <button id="clear-day-btn" class="submit-btn danger-btn small-btn">Limpar Dia</button>
@@ -332,10 +332,10 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-storage.js"></script>
     <script src="assets/js/firebase-config.js"></script>
     <script>
-        loadAsset('assets/css/style.5732ff61.css');
+        loadAsset('assets/css/style.901f3ce2.css');
         loadAsset('https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js');
         loadAsset('https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js');
-        loadAsset('assets/js/admin.5732ff61.js');
+        loadAsset('assets/js/admin.901f3ce2.js');
     </script>
 </body>
 </html>
