--- a/sala-host.html
+++ b/sala-host.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sala do Host - PlayU</title>
     
-    <link rel="stylesheet" href="assets/css/style.5732ff61.css">
+    <link rel="stylesheet" href="assets/css/style.901f3ce2.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
     
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
@@ -17,7 +17,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-storage.js"></script>
 
     <script src="assets/js/firebase-config.js"></script>
-    <script src="assets/js/main.5732ff61.js"></script>
+    <script src="assets/js/main.901f3ce2.js"></script>
 </head>
 <body class="host-room-body">
 
@@ -29,11 +29,12 @@
     <div class="host-grid-container">
         <div class="host-video-area">
             <div class="video-wrapper remote">
-                <video id="host-remote-video" autoplay playsinline></video>
+                <img src="assets/images/GIF Play.U.gif" class="video-bg-gif" alt="Aguardando...">
+                <video id="host-local-video" autoplay playsinline></video>
             </div>
             <div class="video-wrapper local">
-                <video id="host-local-video" autoplay playsinline muted></video>
-                <div class="video-label">Você</div>
+                <video id="host-remote-video" autoplay playsinline muted></video>
+                <div class="video-label"></div>
             </div>
             <div class="host-controls-bar">
                 <button id="host-mic-btn" class="control-btn" title="Microfone"><ion-icon name="mic-outline"></ion-icon></button>
@@ -149,6 +150,6 @@
         }
     </script>
 
-    <script src="assets/js/sala-host.5732ff61.js"></script>
+    <script src="assets/js/sala-host.901f3ce2.js"></script>
 </body>
 </html>
