atualizações sala host e sala jogador

--- a/sala.html
+++ b/sala.html
@@ -32,8 +32,9 @@
                 <img src="assets/images/GIF Play.U.gif" class="video-bg-gif" alt="Aguardando...">
 
 
-        <div id="player-timer" class="player-timer-overlay">00:00</div>
-
+        <div id="player-timer-container">
+            <div id="player-timer-display">00:00</div>
+        </div>
         <div id="player-media-overlay" class="player-media-overlay">
             <button class="close-media-btn" onclick="closeMedia()">&times;</button>
             <div id="media-content-wrapper">
