--- a/sala-host.html
+++ b/sala-host.html
@@ -39,6 +39,15 @@
                 <video id="host-remote-video" autoplay playsinline></video>
                 <div class="video-label">Jogador</div>
             </div>
+            
+            <div id="host-decision-feedback" class="hidden">
+                <div class="feedback-content">
+                    <span class="feedback-label">DECISÃO EM ANDAMENTO</span>
+                    <h3 id="feedback-question">Pergunta aqui?</h3>
+                    <div id="feedback-timer">30s</div>
+                    <button onclick="window.clearPlayerDecision()" class="cancel-decision-btn">Cancelar Agora</button>
+                </div>
+            </div>
 
             <div class="host-controls-bar">
                 <button id="host-mic-btn" class="control-btn" title="Microfone">
@@ -57,6 +66,7 @@
                     <ion-icon name="call-outline"></ion-icon>
                 </button>
             </div>
+            
         </div>
 
         <div class="host-sidebar">
