--- a/admin.html
+++ b/admin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Painel Admin - PlayU</title>
-    <script src="assets/js/version.1dc64fc5.js"></script>
+    <script src="assets/js/version.ca9fe59a.js"></script>
     <script>
         function loadAsset(path) {
             const version = typeof SITE_VERSION !== 'undefined' ? SITE_VERSION : new Date().getTime();
@@ -24,7 +24,6 @@
             <div class="user-menu">
                 <span id="user-greeting">Olá, Admin</span>
                 <a href="index.html" class="submit-btn small-btn">Voltar para Início</a>
-                <button id="logout-btn" class="submit-btn small-btn danger-btn">Sair</button>
             </div>
         </div>
         
@@ -241,7 +240,7 @@
                 <div class="modal-footer"><button type="button" id="delete-game-btn" class="submit-btn danger-btn hidden">Excluir Jogo</button><div class="right-buttons"><button type="button" id="cancel-create-game-btn" class="submit-btn secondary-btn">Cancelar</button><button type="submit" id="save-game-submit-btn" class="submit-btn">Salvar</button></div></div>
             </form>
         </div>
-    </div>
+    </div></div></div>
 
     <div id="agenda-modal" class="modal-overlay hidden">
         <div class="modal-content modal-large">
@@ -271,7 +270,6 @@
                         <div id="single-day-slots" style="display:flex;flex-wrap:wrap;gap:0.5rem;margin:10px 0;"></div>
                         <div style="display:flex; gap:10px;">
                         <input type="text" id="single-time-input" placeholder="HH:MM" maxlength="5" style="flex:1; padding:0.5rem; border-radius:5px; background:var(--bg-color); color:#fff; border:1px solid #444; text-align:center; font-size:1.1rem; letter-spacing: 2px;"><button type="button" id="add-single-time-btn" class="submit-btn small-btn">+</button>
-                        <button type="button" id="add-single-time-btn" class="submit-btn small-btn">+</button>
                         </div>
                         <div style="display:flex;gap:10px;margin-top:15px;justify-content:flex-end;">
                             <button id="clear-day-btn" class="submit-btn danger-btn small-btn">Limpar Dia</button>
@@ -306,7 +304,7 @@
     </div>
 
     <div id="game-sessions-modal" class="modal-overlay hidden">
-        <div class="modal-content" style="max-width: 500px;">
+            <div class="modal-content" id="sessions-modal-content">
             <div class="modal-header">
                 <h2>Sessões: <span id="sessions-game-name" style="color:var(--secondary-color)"></span></h2>
                 <button id="close-sessions-modal" class="close-overlay-btn">&times;</button>
@@ -332,10 +330,10 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-storage.js"></script>
     <script src="assets/js/firebase-config.js"></script>
     <script>
-        loadAsset('assets/css/style.1dc64fc5.css');
+        loadAsset('assets/css/style.ca9fe59a.css');
         loadAsset('https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js');
         loadAsset('https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js');
-        loadAsset('assets/js/admin.1dc64fc5.js');
+        loadAsset('assets/js/admin.ca9fe59a.js');
     </script>
 </body>
 </html>
