--- a/admin.html
+++ b/admin.html
@@ -107,7 +107,8 @@
                     
                     <div class="modal-col-left">
                         <h4 style="color: var(--secondary-color); border-bottom: 1px solid #333; padding-bottom: 10px; margin-bottom: 15px;">Informações</h4>
-                        <div class="form-row"><div class="form-group"><label>Nome *</label><input type="text" id="new-game-name" required></div><div class="form-group"><label>Status</label><select id="new-game-status"><option value="available">Disponível</option><option value="paused">Pausado</option></select></div></div>
+                        <div class="form-row"><div class="form-group"><label>Nome *</label><input type="text" id="new-game-name" required></div>
+                        <div class="form-group"><label>Status</label><select id="new-game-status"><option value="available">Disponível</option><option value="draft">Rascunho</option><option value="paused">Pausado</option></select></div></div>
                         <div class="form-row"><div class="form-group"><label>Duração (Min)</label><input type="number" id="new-game-duration" required></div><div class="form-group"><label>Valor (R$)</label><input type="number" id="new-game-price" step="0.01" required></div></div>
                         <div class="form-group">
                             <label>Máx. Jogadores *</label>
