atualização visual e correção de telas

--- a/admin.html
+++ b/admin.html
@@ -256,11 +256,11 @@
                 </div>
 
                 <div id="schedule-view-calendar">
-                    <div class="calendar-container">
+                    <div class="game-calendar-container">
                         <div class="calendar-header">
-                            <button type="button" id="admin-prev-month" class="month-nav-btn"><ion-icon name="chevron-back"></ion-icon></button>
+                            <button type="button" id="admin-prev-month" class="nav-btn"><ion-icon name="chevron-back"></ion-icon></button>
                             <h4 id="admin-month-header">Janeiro 2026</h4>
-                            <button type="button" id="admin-next-month" class="month-nav-btn"><ion-icon name="chevron-forward"></ion-icon></button>
+                            <button type="button" id="admin-next-month" class="nav-btn"><ion-icon name="chevron-forward"></ion-icon></button>
                         </div>
                         <div class="calendar-weekdays"><div>Dom</div><div>Seg</div><div>Ter</div><div>Qua</div><div>Qui</div><div>Sex</div><div>Sáb</div></div>
                         <div id="admin-calendar-grid" class="calendar-grid"></div>
