--- a/host-panel.html
+++ b/host-panel.html
@@ -107,9 +107,9 @@
         <div class="calendar-container">
             <h3 id="availability-game-name">Gerenciar Disponibilidade</h3>
             <div class="calendar-header">
-                <button id="prev-month-btn-modal" class="month-nav-btn">&lt;</button>
+                <button id="prev-month-btn-modal" class="nav-btn">&lt;</button>
                 <h4 id="month-year-header-modal"></h4>
-                <button id="next-month-btn-modal" class="month-nav-btn">&gt;</button>
+                <button id="next-month-btn-modal" class="nav-btn">&gt;</button>
             </div>
             <div class="calendar-weekdays">
                 </div>
