--- a/jogo-template.html
+++ b/jogo-template.html
@@ -65,9 +65,9 @@
     <div class="calendar-wrapper">
         <div id="game-calendar-container">
             <div class="calendar-header">
-                <button id="prev-month-btn" class="month-nav-btn"><ion-icon name="chevron-back"></ion-icon></button>
+                <button id="prev-month-btn" class="nav-btn"><ion-icon name="chevron-back"></ion-icon></button>
                 <h4 id="calendar-month-display">Janeiro 2026</h4>
-                <button id="next-month-btn" class="month-nav-btn"><ion-icon name="chevron-forward"></ion-icon></button>
+                <button id="next-month-btn" class="nav-btn"><ion-icon name="chevron-forward"></ion-icon></button>
             </div>
             <div class="calendar-weekdays">
                 <div>Dom</div><div>Seg</div><div>Ter</div><div>Qua</div><div>Qui</div><div>Sex</div><div>Sáb</div>
