--- a/admin.html
+++ b/admin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Painel Admin - PlayU</title>
-    <script src="assets/js/version.0878346b.js"></script>
+    <script src="assets/js/version.839b5fe8.js"></script>
     <script>
         function loadAsset(path) {
             const version = typeof SITE_VERSION !== 'undefined' ? SITE_VERSION : new Date().getTime();
@@ -256,11 +256,11 @@
                 </div>
 
                 <div id="schedule-view-calendar">
-                    <div class="calendar-container">
+                    <div class="game-calendar-container">
                         <div class="calendar-header">
-                            <button type="button" id="admin-prev-month" class="month-nav-btn"><ion-icon name="chevron-back"></ion-icon></button>
+                            <button type="button" id="admin-prev-month" class="nav-btn"><ion-icon name="chevron-back"></ion-icon></button>
                             <h4 id="admin-month-header">Janeiro 2026</h4>
-                            <button type="button" id="admin-next-month" class="month-nav-btn"><ion-icon name="chevron-forward"></ion-icon></button>
+                            <button type="button" id="admin-next-month" class="nav-btn"><ion-icon name="chevron-forward"></ion-icon></button>
                         </div>
                         <div class="calendar-weekdays"><div>Dom</div><div>Seg</div><div>Ter</div><div>Qua</div><div>Qui</div><div>Sex</div><div>Sáb</div></div>
                         <div id="admin-calendar-grid" class="calendar-grid"></div>
@@ -331,10 +331,10 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-storage.js"></script>
     <script src="assets/js/firebase-config.js"></script>
     <script>
-        loadAsset('assets/css/style.0878346b.css');
+        loadAsset('assets/css/style.839b5fe8.css');
         loadAsset('https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js');
         loadAsset('https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js');
-        loadAsset('assets/js/admin.0878346b.js');
+        loadAsset('assets/js/admin.839b5fe8.js');
     </script>
 </body>
 </html>
