--- a/host-panel.html
+++ b/host-panel.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Painel do Host</title>
-    <link rel="stylesheet" href="assets/css/style.0878346b.css">
+    <link rel="stylesheet" href="assets/css/style.839b5fe8.css">
     <link rel="icon" href="assets/images/logo.png" type="image/png">
 </head>
 <body class="admin-page-body">
@@ -107,9 +107,9 @@
         <div class="calendar-container">
             <h3 id="availability-game-name">Gerenciar Disponibilidade</h3>
             <div class="calendar-header">
-                <button id="prev-month-btn-modal" class="month-nav-btn">&lt;</button>
+                <button id="prev-month-btn-modal" class="nav-btn">&lt;</button>
                 <h4 id="month-year-header-modal"></h4>
-                <button id="next-month-btn-modal" class="month-nav-btn">&gt;</button>
+                <button id="next-month-btn-modal" class="nav-btn">&gt;</button>
             </div>
             <div class="calendar-weekdays">
                 </div>
@@ -134,15 +134,15 @@
 </dialog>
 </main>
     <script>
-    loadAsset('assets/css/style.0878346b.css');
+    loadAsset('assets/css/style.839b5fe8.css');
     loadAsset('https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js');
     loadAsset('https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js');
     loadAsset('assets/js/gamedata.js');
-    loadAsset('assets/js/userdata.0878346b.js');
-    loadAsset('assets/js/data-manager.0878346b.js');
-    loadAsset('assets/js/host-panel.0878346b.js');    
-    loadAsset('assets/js/profile-editor.0878346b.js');
-    loadAsset('assets/js/availability-editor.0878346b.js');
+    loadAsset('assets/js/userdata.839b5fe8.js');
+    loadAsset('assets/js/data-manager.839b5fe8.js');
+    loadAsset('assets/js/host-panel.839b5fe8.js');    
+    loadAsset('assets/js/profile-editor.839b5fe8.js');
+    loadAsset('assets/js/availability-editor.839b5fe8.js');
 </script>
 </body>
 </html>
