--- a/jogo-template.html
+++ b/jogo-template.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carregando Jogo... | PlayU</title>
-    <link rel="stylesheet" href="/assets/css/style.0878346b.css">
+    <link rel="stylesheet" href="/assets/css/style.839b5fe8.css">
     <link rel="icon" href="/assets/images/logo.png" type="image/png">
 </head>
 <body>
@@ -65,9 +65,9 @@
     <div class="calendar-wrapper">
         <div id="game-calendar-container">
             <div class="calendar-header">
-                <button id="prev-month-btn" class="month-nav-btn"><ion-icon name="chevron-back"></ion-icon></button>
+                <button id="prev-month-btn" class="nav-btn"><ion-icon name="chevron-back"></ion-icon></button>
                 <h4 id="calendar-month-display">Janeiro 2026</h4>
-                <button id="next-month-btn" class="month-nav-btn"><ion-icon name="chevron-forward"></ion-icon></button>
+                <button id="next-month-btn" class="nav-btn"><ion-icon name="chevron-forward"></ion-icon></button>
             </div>
             <div class="calendar-weekdays">
                 <div>Dom</div><div>Seg</div><div>Ter</div><div>Qua</div><div>Qui</div><div>Sex</div><div>Sáb</div>
@@ -106,9 +106,9 @@
 
     <script>
         const version = new Date().getTime();
-        document.write(`<script src="/assets/js/data-manager.0878346b.js?v=${version}"><\/script>`);
-        document.write(`<script src="/assets/js/game-page.0878346b.js?v=${version}"><\/script>`);
-        document.write(`<script src="/assets/js/main.0878346b.js?v=${version}"><\/script>`); 
+        document.write(`<script src="/assets/js/data-manager.839b5fe8.js?v=${version}"><\/script>`);
+        document.write(`<script src="/assets/js/game-page.839b5fe8.js?v=${version}"><\/script>`);
+        document.write(`<script src="/assets/js/main.839b5fe8.js?v=${version}"><\/script>`); 
     </script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 </body>
