atualizações visuais na tela de admin e nos modais

--- a/dashboard.html
+++ b/dashboard.html
@@ -151,7 +151,7 @@
                     </div>
                     <div class="form-group" style="background: rgba(0,0,0,0.2); padding: 1rem; border-radius: 8px; margin-top: 1rem;">
                         <label>Imagem de Capa *</label>
-                        <label for="admin-cover-upload" class="upload-label">
+                        <label for="admin-cover-upload" class="upload-btn">
                             <ion-icon name="cloud-upload-outline"></ion-icon> <span>Enviar Imagem</span>
                         </label>
                         <input type="file" id="admin-cover-upload" accept="image/*" style="display: none;">
