--- a/host-panel.html
+++ b/host-panel.html
@@ -73,7 +73,7 @@
             </div>
             <div class="form-group">
                 <label>Imagem de Capa</label>
-                <label for="coverImageUpload" class="upload-label">
+                <label for="coverImageUpload" class="upload-btn">
                     <ion-icon name="cloud-upload-outline"></ion-icon>
                     <span>Enviar do Computador</span>
                 </label>
