--- a/dashboard.html
+++ b/dashboard.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard - PlayU</title>
     
-    <script src="assets/js/version.839b5fe8.js"></script>
+    <script src="assets/js/version.3a106c79.js"></script>
     <script>
         function loadAsset(path) {
             const version = typeof SITE_VERSION !== 'undefined' ? SITE_VERSION : new Date().getTime();
@@ -151,7 +151,7 @@
                     </div>
                     <div class="form-group" style="background: rgba(0,0,0,0.2); padding: 1rem; border-radius: 8px; margin-top: 1rem;">
                         <label>Imagem de Capa *</label>
-                        <label for="admin-cover-upload" class="upload-label">
+                        <label for="admin-cover-upload" class="upload-btn">
                             <ion-icon name="cloud-upload-outline"></ion-icon> <span>Enviar Imagem</span>
                         </label>
                         <input type="file" id="admin-cover-upload" accept="image/*" style="display: none;">
@@ -243,13 +243,13 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-storage.js"></script>
 
     <script src="assets/js/firebase-config.js"></script>
-    <script src="assets/js/main.839b5fe8.js"></script> 
+    <script src="assets/js/main.3a106c79.js"></script> 
 
     <script>
-        loadAsset('assets/css/style.839b5fe8.css');
+        loadAsset('assets/css/style.3a106c79.css');
         loadAsset('https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js');
         loadAsset('https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js');
-        loadAsset('assets/js/dashboard.839b5fe8.js');
+        loadAsset('assets/js/dashboard.3a106c79.js');
     </script>
 </body>
 </html>
