--- a/host-panel.html
+++ b/host-panel.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Painel do Host</title>
-    <link rel="stylesheet" href="assets/css/style.839b5fe8.css">
+    <link rel="stylesheet" href="assets/css/style.3a106c79.css">
     <link rel="icon" href="assets/images/logo.png" type="image/png">
 </head>
 <body class="admin-page-body">
@@ -73,7 +73,7 @@
             </div>
             <div class="form-group">
                 <label>Imagem de Capa</label>
-                <label for="coverImageUpload" class="upload-label">
+                <label for="coverImageUpload" class="upload-btn">
                     <ion-icon name="cloud-upload-outline"></ion-icon>
                     <span>Enviar do Computador</span>
                 </label>
@@ -134,15 +134,15 @@
 </dialog>
 </main>
     <script>
-    loadAsset('assets/css/style.839b5fe8.css');
+    loadAsset('assets/css/style.3a106c79.css');
     loadAsset('https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js');
     loadAsset('https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js');
     loadAsset('assets/js/gamedata.js');
-    loadAsset('assets/js/userdata.839b5fe8.js');
-    loadAsset('assets/js/data-manager.839b5fe8.js');
-    loadAsset('assets/js/host-panel.839b5fe8.js');    
-    loadAsset('assets/js/profile-editor.839b5fe8.js');
-    loadAsset('assets/js/availability-editor.839b5fe8.js');
+    loadAsset('assets/js/userdata.3a106c79.js');
+    loadAsset('assets/js/data-manager.3a106c79.js');
+    loadAsset('assets/js/host-panel.3a106c79.js');    
+    loadAsset('assets/js/profile-editor.3a106c79.js');
+    loadAsset('assets/js/availability-editor.3a106c79.js');
 </script>
 </body>
 </html>
