atualizações visuais e melhorias no fluxo do site

--- a/jogo-template.html
+++ b/jogo-template.html
@@ -49,8 +49,8 @@
                 <h2 class="section-title" style="text-align:center; border:none; margin-bottom:1rem;">Galeria</h2>
                 <div id="carousel-container" class="game-carousel-wrapper">
                     <div class="game-carousel-track" id="game-carousel-track"></div>
-                    <button class="carousel-btn prev-slide" id="btn-prev-photo">&#10094;</button>
-                    <button class="carousel-btn next-slide" id="btn-next-photo">&#10095;</button>
+                    <button class="nav-btn" id="btn-prev-photo">&#10094;</button>
+                    <button class="nav-btn" id="btn-next-photo">&#10095;</button>
                 </div>
             </div>
 
